# waypoint_navigation

./: CMakeLists.txt  README.md  package.xml
data/: waypoints.json
include/waypoint_navigation/: waypoint_navigator_node.hpp
src/: waypoint_navigator_node.cpp
